--- a/index.html
+++ b/index.html
@@ -5,33 +5,14 @@
 	<title>TEST PAGE</title>
 </head>
 <body>
-	<h1>Calender</h1>
-	<table>
-	  <tr>
-	  	<th>日</th><th>月</th><th>火</th><th>水</th><th>木</th><th>金</th><th>土</th>
-	  </tr>
-	  <tr>
-	  	<td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td>
-	  </tr>
-	  <tr>
-	  	<td>8</td><td>9</td><td>10</td><td>11</td><td>12</td><td>13</td><td>14</td>
-	  </tr>
-	  <tr>
-	  	<td>15</td><td>16</td><td>17</td><td>18</td><td>19</td><td>20</td><td>21</td>
-	  </tr>
-	  <tr>
-	  	<td>22</td><td>23</td><td>24</td><td>25</td><td>26</td><td>27</td><td>28</td>
-	  </tr>
-	  <tr>
-	  	<td>29</td><td>30</td><td>31</td><td class="mute">1</td><td class="mute">2</td><td class="mute">3</td><td class="mute">4</td>
-	  </tr>
-	</table>
+	<h1>Soot's Page</h1>
+	<h2>hello world</h2>
 
 	<style>
 	  body {
-	    background-color: #f2f2f2;
+	    background-color: #f4f4f4;
 	    /*background-image: url();*/
-	    text-align: center;
+	    /*text-align: center;*/
 	  }
 	  h1 {
 	  	color: #ffffff;
